Fix the wrapping on code snippets and category tags

--- a/app/stylesheets/learn.scss
+++ b/app/stylesheets/learn.scss
@@ -153,4 +153,5 @@ img.plus-cursor
     margin: 0 2px;
     color: white;
     cursor: pointer;
+    display: inline-block;
 }
