--- a/app/stylesheets/override.scss
+++ b/app/stylesheets/override.scss
@@ -14,4 +14,5 @@ code
 {
     background: none;
     padding: 0;
+    display: inline;
 }
